# Life-controller-core

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  app_config.hpp.in  check_duplicate.bat  library.json  vcpkg.json
app/: CMakeLists.txt  app_config.hpp.in  build.bat  doctest_header.h  main.cpp  systray.c  systray.h  windowBehaviour.c  windowBehaviour.h
app/assets/: .gitignore  hello.txt
app/assets/app_settings/emscripten/: shell.emscripten.html
app/fonts/: CMakelists.txt  fontbuilder.py
app/texocr/: CMakeLists.txt  texocr.cpp  texocr.py
app/utils/: CMakeLists.txt  README.md  getActiveWindowTitle.cpp  getActiveWindowTitle.py  getCurrentMedia.py  requirements.txt  windowsInfoGatherer.cpp  windowsInfoGatherer.py
life-controller-core/: CMakeLists.txt  action.cpp  action.hpp  common.cpp  config.hpp  io.hpp  log_eval.cpp
src/: CMakeLists.txt  action.cpp  action.hpp  analysis.cpp  analysis.hpp  common.cpp  common.hpp  config.hpp  io.cpp  io.hpp  log_eval.cpp  log_eval.hpp
src/include/fast-cpp-csv-parser/: csv.h
